kubernetes/traefik-whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: alpine
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: whoami
spec:
 ports:
   - name: web
     port: 80
     targetPort: 80
 selector:
   app: whoami
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - "whoami.averix.tech"
      secretName: whoami-averix-tech
  rules:
    - host: "whoami.averix.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
